# swagger_server/models/list_res.py
@@ -1,0 +1,63 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.list_res_data import ListResData  # noqa: F401,E501
+from swagger_server import util
+
+
+class ListRes(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, data: ListResData=None):  # noqa: E501
+        """ListRes - a model defined in Swagger
+
+        :param data: The data of this ListRes.  # noqa: E501
+        :type data: ListResData
+        """
+        self.swagger_types = {
+            'data': ListResData
+        }
+
+        self.attribute_map = {
+            'data': 'data'
+        }
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ListRes':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ListRes of this ListRes.  # noqa: E501
+        :rtype: ListRes
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def data(self) -> ListResData:
+        """Gets the data of this ListRes.
+
+
+        :return: The data of this ListRes.
+        :rtype: ListResData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: ListResData):
+        """Sets the data of this ListRes.
+
+
+        :param data: The data of this ListRes.
+        :type data: ListResData
+        """
+
+        self._data = data
